// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App after advice fetched renders correctly 1`] = `
<App>
  <div
    className="App"
  >
    <p
      className="Advice"
    >
      Always trust random advice.
    </p>
    <ShowOtherAdviceButton
      onClick={[Function]}
    >
      <button
        className="Advice-other-advice-button"
        onClick={[Function]}
      >
        Show other advice
      </button>
    </ShowOtherAdviceButton>
  </div>
</App>
`;

exports[`App after advice fetched when button clicked renders other random advice 1`] = `
<App>
  <div
    className="App"
  >
    <p
      className="Advice"
    >
      Other advice.
    </p>
    <ShowOtherAdviceButton
      onClick={[Function]}
    >
      <button
        className="Advice-other-advice-button"
        onClick={[Function]}
      >
        Show other advice
      </button>
    </ShowOtherAdviceButton>
  </div>
</App>
`;

exports[`App before advice fetched renders correctly 1`] = `
<App>
  <div
    className="App"
  >
    <p
      className="Advice"
    >
      …
    </p>
    <ShowOtherAdviceButton
      onClick={[Function]}
    >
      <button
        className="Advice-other-advice-button"
        onClick={[Function]}
      >
        Show other advice
      </button>
    </ShowOtherAdviceButton>
  </div>
</App>
`;
